# pca-app

./: .dockerignore  .gitignore  ADD_ENV_VARS_NOW.txt  ADD_MISSING_ENV_VARS.md  ADD_VERCEL_ENV_NOW.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE_CLARIFICATION_QUESTIONS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_VISUAL.html  BEST_DESKTOP_OPTIONS.md  BRANCH_CHANGES_NOTES.md  BRANCH_REVIEW_SUMMARY.md  BUDGET_SOLUTIONS.md  CALENDAR_EVENTS_MIGRATION_STATUS.md  CHEAPER_LAPTOP_OPTIONS.md  CHECK_CLIENT_ID.md  COACH_SECONDARY_ACCOUNT_ONBOARDING.md  CODESPACES_DEV.md  COST_BREAKDOWN.md  CURRENT_STATE_INSIGHTS.html  CURRENT_UNDERSTANDING_SESSION1.md  CURSOR_MCP_RENDER_CONFIG.md  CURSOR_MCP_RENDER_CORRECT_CONFIG.md  CUSTOM_BUILD_SITES.md  DEBUG_OAUTH_MISMATCH.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MONITORING.md  DEPLOYMENT_OPTIMIZATION.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_TROUBLESHOOTING.md  DESKTOP_LAPTOP_HYBRID_SETUP.md  DESKTOP_LINUX_RELIABILITY.md  DESKTOP_NO_WINDOWS_OPTIONS.md  DESKTOP_SPECIFIC_GENERATIONS.md  DESKTOP_VS_LAPTOP_FOR_DEV.md  DESKTOP_VS_SERVER_FOR_DEV.md  DEV.md  DEV_BRANCH_CLEANUP_ANALYSIS.md  (+113 more)
.devcontainer/: README.md  devcontainer.json  set-port-public.sh  setup-env.sh  start-dev-server.sh  stop-dev-server.sh  sync-to-codespace.sh
planner_service/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
planner_service/fitshift/: __init__.py  __main__.py  db.py  scheduler.py  views.py
planner_service/fitshift/static/: app.css  app.js
planner_service/fitshift/templates/: index.html
(+268 files in other folders)
