[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitshift"
version = "0.1.0"
description = "Fitness and coaching scheduling application built with Flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0,<4.0",
]

[tool.setuptools.package-data]
fitshift = ["templates/*.html", "static/*.css", "static/*.js"]
